src/test/custom/invalid/struct/structTypeWrong.wacc
# Output:
# #semantic error#

# Program:

begin
  int x = 1;
  println x.i
end